# miniboone-classification

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
notebooks/: 01_data_exploration.ipynb
scripts/: training.py
src/: config.py
src/config/: __init__.py  config.py  logging.yaml  paths.py  presets.py
src/data/: __init__.py  data_cleaner.py  data_handler.py  data_loader.py  data_processor.py
src/ml/: evaluator.py  experiment.py  model_factory.py  model_registry.py  trainer.py
src/plotter/: __init__.py  base_plotter.py  dimensionality_reduction_plotter.py  neutrino_plotter.py
src/stats/: statistical_analysis.py
src/styles/: plot_style.py
src/utils/: logger.py  paths.py
src/visualization/: __init__.py  plotter.py
tests/: conftest.py  test_config.py  test_data_handler.py  test_smokes.py
tests/integration/: test_error_handling.py  test_integration.py  test_performance.py
tests/unit/: test_config.py  test_data_handler.py  test_dimensionality_plotter.py  test_neutrino_plotter.py  test_plotter.py  test_statistical_analysis.py
tests/unit/data/: test_data_cleaner.py  test_data_handler.py  test_data_loader.py  test_data_processor.py
tests/unit/plotter/: test_base_plotter.py
