[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniboone-classification"
version = "0.0.1"
description = "Build and deploy a machine learning model to distinguish electron neutrinos (signal) from muon neutrinos (background), based on reconstructed detector event features."
authors = [
  { name = "Michael Chadolias", email = "mchadolias@gmail.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "numpy>=2.3.4",
    "scikit-learn>=1.7.2",
    "joblib>=1.5.2",
    "xgboost>=3.1.1",
    "pydantic-settings>=2.12.0",
    "pandas>=2.3.3",
    "kaggle>=1.7.4.5",
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
    "pytest-logging>=2015.11.4",
]

viz = [
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

all = [
    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-html>=4.1.0",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pandas>=2.3.3",
    "kaggle>=1.7.4.5",
    "pytest-logging>=2015.11.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 99
target-version = ['py313']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["miniboone-classification"]
force_sort_within_sections = true
line_length = 99

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--strict-config",
]

[project.urls]
Homepage = "https://github.com/mchadolias/miniboone-classification"
Repository = "https://github.com/mchadolias/miniboone-classification"
"Bug Reports" = "https://github.com/mchadolias/miniboone-classification/issues"

[project.scripts]
miniboone-train = "miniboone-classification.cli:train"
miniboone-predict = "miniboone-classification.cli:predict"
